--- a/PowerPack/v.01/PowerPack/src/net/vdombox/powerpack/control/ControlBarButton.mxml
+++ b/PowerPack/v.01/PowerPack/src/net/vdombox/powerpack/control/ControlBarButton.mxml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <mx:Button xmlns:mx="http://www.adobe.com/2006/mxml" 
-		   width="25" height="25"
-		   skin="{ControlBarBtnBorderSkin}"
-		   icon="{sourceEnabled}">
+		   width="22" height="22"
+		   icon="{sourceEnabled}"
+		   focusEnabled="false">
 	<mx:Script>
 		<![CDATA[
 			import mx.events.FlexEvent;
