select initial graph on change selected project
git-svn-id: http://svn.vdombox.ru/flextools/trunk@8139 230e8929-42e3-3b44-a413-55659dd3a577

--- a/PowerPack/v.01/PowerPack/src/net/vdombox/powerpack/panel/Graphs.mxml
+++ b/PowerPack/v.01/PowerPack/src/net/vdombox/powerpack/panel/Graphs.mxml
@@ -111,6 +111,11 @@
 			if (vsViewStack)
 				vsViewStack.addEventListener(ChildExistenceChangedEvent.CHILD_REMOVE, viewStack_childRemoveHandler);
 		}
+			
+		private function selectedProjectChanged (obj : Object) : void
+		{
+			selectGraph(getGraphByName(currentTemplate.selectedProject.initialGraphName));
+		}
 		
 		private function graphEditor_controlBarItemClickHandler (controlBarEvent : ControlBarEvent) : void
 		{
@@ -398,9 +403,11 @@
 
 				dispatchEvent( new Event( TPL_CHANGED ) );
 				dispatchEvent( new Event( TPL_POPULATE_COMPLETE ) );
+				
+				BindingUtils.bindSetter( selectedProjectChanged, currentTemplate, "selectedProject");
 			}
 		}
-
+		
 		/**
 		 *	Gen XML that represents template
 		 */
