select initial graph on change selected project
git-svn-id: http://svn.vdombox.ru/flextools/trunk@8140 230e8929-42e3-3b44-a413-55659dd3a577

--- a/PowerPack/v.01/PowerPack/src/net/vdombox/powerpack/panel/Graphs.mxml
+++ b/PowerPack/v.01/PowerPack/src/net/vdombox/powerpack/panel/Graphs.mxml
@@ -43,6 +43,7 @@
 			import net.vdombox.powerpack.lib.player.managers.ContextManager;
 			import net.vdombox.powerpack.lib.player.managers.LanguageManager;
 			import net.vdombox.powerpack.lib.player.popup.AlertPopup;
+			import net.vdombox.powerpack.lib.player.template.TemplateProject;
 			import net.vdombox.powerpack.managers.BuilderContextManager;
 			import net.vdombox.powerpack.managers.ProgressManager;
 			import net.vdombox.powerpack.panel.graphsClasses.AccordionChild;
@@ -112,9 +113,14 @@
 				vsViewStack.addEventListener(ChildExistenceChangedEvent.CHILD_REMOVE, viewStack_childRemoveHandler);
 		}
 			
-		private function selectedProjectChanged (obj : Object) : void
+		private function selectedProjectChanged (selProject : TemplateProject) : void
 		{
-			selectGraph(getGraphByName(currentTemplate.selectedProject.initialGraphName));
+			if (selProject)
+			{
+				var selectedProjectInitialGraph : GraphCanvas = getGraphByName(selProject.initialGraphName);
+				
+				selectGraph ( selectedProjectInitialGraph );
+			}
 		}
 		
 		private function graphEditor_controlBarItemClickHandler (controlBarEvent : ControlBarEvent) : void
@@ -265,6 +271,14 @@
 
 		public function findFirstGraph() : GraphCanvas
 		{
+			if (currentTemplate && currentTemplate.selectedProject)
+			{
+				var selectedProjectInitialGraph : GraphCanvas = getGraphByName(currentTemplate.selectedProject.initialGraphName);
+				
+				if (selectedProjectInitialGraph)
+					return selectedProjectInitialGraph;
+			}
+					
 			for each( var child : AccordionChild in graphsAccordion.getChildren() )
 			{
 				if ( tabMap[child] )
@@ -396,8 +410,6 @@
 				{
 					populateGraph( graphXML );
 				}
-
-				selectGraph( findFirstGraph() );
 
 				ProgressManager.complete();
 
