--- a/IDE/v.02/modules/DB/src/net/vdombox/ide/modules/dataBase/view/components/DataTablesTree.mxml
+++ b/IDE/v.02/modules/DB/src/net/vdombox/ide/modules/dataBase/view/components/DataTablesTree.mxml
@@ -296,7 +296,7 @@
 	<s:VGroup width="100%" height="100%">
 		<mx:Tree id="tablesTree" width="100%" height="100%" doubleClickEnabled="true"
 				 dataProvider="{ _dataBases }" labelField="@name" contentBackgroundAlpha="0"
-				 itemRenderer="net.vdombox.ide.common.view.components.itemrenderers.ObjectsTreePanelItemRenderer"/>
+				 itemRenderer="net.vdombox.ide.modules.dataBase.view.components.ItemRenderers.ObjectTreePanelItemRenderer"/>
 		
 		<s:HGroup width="100%" height="40" verticalAlign="middle" horizontalAlign="center">
 			<button:VDOMButton id="newBase" label="New Base" click="newBase_clickHandler(event)" />
