git-svn-id: http://svn.vdombox.ru/flextools/trunk@8142 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/skins/EventElementSkin.mxml
+++ b/IDE/v.02/modules/Events/src/net/vdombox/ide/modules/events/view/skins/EventElementSkin.mxml
@@ -157,7 +157,7 @@
 			visible="{hostComponent.selected}"
 			radiusX="6" radiusY="6">
 		<s:fill>
-			<s:SolidColor color="#0000FF"/>
+			<s:SolidColor color="#A8C6EE"/>
 		</s:fill>
 	</s:Rect>
 
