--- a/IDE/v.02/modules/Scripts/src/net/vdombox/ide/modules/scripts/view/components/ListItemRenderer.mxml
+++ b/IDE/v.02/modules/Scripts/src/net/vdombox/ide/modules/scripts/view/components/ListItemRenderer.mxml
@@ -8,12 +8,29 @@
 	
 	<fx:Script>
 		<![CDATA[
+			import mx.events.CloseEvent;
+			
+			import net.vdombox.ide.common.events.PopUpWindowEvent;
+			import net.vdombox.ide.common.model._vo.PageVO;
 			import net.vdombox.ide.common.model._vo.ServerActionVO;
+			import net.vdombox.ide.common.view.components.VDOMImage;
+			import net.vdombox.ide.common.view.components.button.AlertButton;
+			import net.vdombox.ide.common.view.components.windows.Alert;
+			import net.vdombox.ide.common.view.components.windows.NameObjectWindow;
 			import net.vdombox.ide.modules.scripts.events.ListItemRendererEvent;
+			import net.vdombox.utils.WindowManager;
+			
+			private var renameItem : ContextMenuItem;
+			private var deleteItem : ContextMenuItem
 			
 			override public function set data( value : Object ) : void
 			{
 				super.data = value;
+				
+				if ( !contextMenu )
+					contextMenu = new ContextMenu();
+				
+				contextMenu.removeAllItems();
 				
 				if ( value && value is ServerActionVO )
 				{
@@ -21,6 +38,50 @@
 						itemName.setStyle( "color", 0x00FF00 );
 					else
 						itemName.setStyle( "color", 0xFFFFFF  );
+					
+					renameItem= new ContextMenuItem( "Rename" );
+					renameItem.addEventListener( Event.SELECT, renameContextMenuHandler, false, 0, true );
+					contextMenu.addItem( renameItem );
+				}
+				
+				deleteItem = new ContextMenuItem( "Delete" );
+				deleteItem.addEventListener( Event.SELECT, deleteContextMenuHandler, false, 0, true );
+				contextMenu.addItem( deleteItem );
+			}
+			
+			private function renameContextMenuHandler( event : Event ) : void
+			{
+				var renameWindow : NameObjectWindow = new NameObjectWindow( data.name );	
+				renameWindow.addEventListener( PopUpWindowEvent.APPLY, applyHandler );
+				renameWindow.addEventListener( PopUpWindowEvent.CANCEL, cancelHandler );
+				
+				WindowManager.getInstance().addWindow(renameWindow, this, true);
+				
+				function applyHandler( event : PopUpWindowEvent ) : void
+				{
+					WindowManager.getInstance().removeWindow( renameWindow );
+					var renameEvent : ListItemRendererEvent = new ListItemRendererEvent ( ListItemRendererEvent.NAME_CHANGE );
+					
+					renameEvent.object = event.name;
+					dispatchEvent( renameEvent );
+				}
+				
+				function cancelHandler( event : PopUpWindowEvent ) : void
+				{
+					WindowManager.getInstance().removeWindow( renameWindow );
+				}
+			}
+			
+			private function deleteContextMenuHandler( event : Event ) : void
+			{
+				Alert.setPatametrs( "Delete", "Cancel", VDOMImage.Delete );
+				
+				Alert.Show(resourceManager.getString( "DataBase_General", "delete_table" ) + "?" ,AlertButton.OK_No, parentApplication, closeHandler);
+				
+				function closeHandler( event : CloseEvent ) : void
+				{
+					if (event.detail == Alert.YES)
+						dispatchEvent(  new ListItemRendererEvent ( ListItemRendererEvent.DELETE_PRESS ) );
 				}
 			}
 			
