mark initial graphs in accordion
git-svn-id: http://svn.vdombox.ru/flextools/trunk@8145 230e8929-42e3-3b44-a413-55659dd3a577

--- a/PowerPack/v.01/PowerPack/src/assets/style/style.css
+++ b/PowerPack/v.01/PowerPack/src/assets/style/style.css
@@ -455,3 +455,14 @@ ScrollBar {
 	horizontalGap   : 1;
 	horizontalAlign : center
 }
+
+GraphThumb
+{
+	horizontalAlign	: center;
+	verticalAlign	: middle;
+	
+	backgroundAlpha : 0.7;
+	backgroundUsualColor : #fbfbfb;
+	backgroundInitialColor : #d1ffd1;
+	backgroundCurrentInitialColor : #88ff88;
+}
