set unique graph name on copy/import
git-svn-id: http://svn.vdombox.ru/flextools/trunk@8148 230e8929-42e3-3b44-a413-55659dd3a577

--- a/PowerPack/v.01/PowerPack/src/Builder.mxml
+++ b/PowerPack/v.01/PowerPack/src/Builder.mxml
@@ -1156,7 +1156,7 @@
 					graph.fromXML( itm );
 
 					var newGraph : GraphCanvas = graph.clone();
-					newGraph.name = "Imported_" + graph.name;
+					newGraph.name = pnl_graphs.createUniqueGraphName("Imported_" + graph.name);
 					pnl_graphs.addGraph( newGraph );
 				}
 			}
