--- a/PowerPack/v.01/PowerPack/src/net/vdombox/powerpack/panel/Graphs.mxml
+++ b/PowerPack/v.01/PowerPack/src/net/vdombox/powerpack/panel/Graphs.mxml
@@ -754,7 +754,7 @@
 			var newGraph : GraphCanvas = curGraph.clone();
 
 			newGraph.name = NameUtil.createUniqueName( newGraph );
-			newGraph.name = createUniqueCopyName( curGraph.name, child.graphs );
+			newGraph.name = createUniqueGraphName( curGraph.name );
 			newGraph.label = newGraph.name;
 
 			addGraph( newGraph );
@@ -769,7 +769,7 @@
 			dispatchEvent( new Event( TPL_CHANGED ) );
 		}
 
-		public function createUniqueCopyName( name : String, context : Object ) : String
+		public function createUniqueGraphName( name : String ) : String
 		{
 			var index : int = 1;
 			var isUniqueName : Boolean = true;
@@ -778,7 +778,7 @@
 			do
 			{
 				newName = name + '_' + index;
-				isUniqueName = isUniqueGraphNameInCategory( newName, context );
+				isUniqueName = isUniqueGraphNameInGlobal( newName, null );
 
 				index++;
 			} while ( !isUniqueName )
