node font size -> 13
git-svn-id: http://svn.vdombox.ru/flextools/trunk@8151 230e8929-42e3-3b44-a413-55659dd3a577

--- a/PowerPack/v.01/PowerPack/src/assets/style/style.css
+++ b/PowerPack/v.01/PowerPack/src/assets/style/style.css
@@ -466,3 +466,8 @@ GraphThumb
 	backgroundInitialColor : #d1ffd1;
 	backgroundCurrentInitialColor : #88ff88;
 }
+
+SuperTextArea
+{
+	fontSize : 13;
+}
